# feedback-system

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  bts.jsonc  compose.example.yaml  compose.local.yaml  compose.production.yaml  cookies.txt  docker-compose.yaml  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/admin/: .env.example  index.html  package.json  vite.config.ts
apps/bot/: .env.example  certificate.crt  pyproject.toml
apps/bot/app/bot/: cache.py  fsm.py  keyboards.py  provider.py  templates.py
apps/bot/app/bot/handlers/: __init__.py  router_area.py  router_feedback.py  router_region.py
apps/form/: index.html  package-lock.json  package.json  vite.config.ts
apps/server/: .env.example  Dockerfile  package.json  tsconfig.json  tsdown.config.ts
apps/telegram-bot/: .env.example
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
dozzle/: users.yml
dozzle/admin/: profile.json
infrastructure/: compose.authelia.yaml  compose.crowdsec.yaml  compose.dozzle.yaml  compose.minio.local.yaml  compose.minio.production.yaml  compose.pgadmin.yaml  compose.postgres.yaml  compose.traefik.yaml
infrastructure/authelia/: configuration.yml  users.example.yml
infrastructure/postgres/: Dockerfile
infrastructure/signoz/: compose.yaml  otel-collector-config.yaml
shared/api/: package.json  tsconfig.json
shared/auth/: .env.example  package.json  tsconfig.json
shared/database/: .env.example  Dockerfile  compose.local.yaml  compose.production.yaml  data.db  data_actual.db  package.json  (+1 more)
(+341 files in other folders)
