[project]
name = "social-bot"
version = "0.1.0"
description = "aiogram tg bot backed with fastapi serving via uvicorn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "environs>=11.0.0",
    "fastapi[standard]>=0.115.4",
    "hishel[httpx]>=1.1.5",
    "httpx>=0.27.2",
    "redis>=5.2.0",
    "ruff>=0.7.1",
]
